object/chapter1/example/src/bad/Ticket.java
package bad;

class Ticket {
    private Long fee;

    Long getFee() {
        return this.fee;
    }
}
